--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,17 @@
 development:
   adapter: postgresql
-  database: discourse_development
-  min_messages: warning
-  pool: 5
+  database: discourse
+  username: postgres
+  # password: postgres # if using username/password auth
+  # host: dbhost		# if not localhost
+  pool: 5 	# size of DB connection pool *per process*
   timeout: 5000
+  # db_id: 0	# database ID if hosting multiple sites
   host_names:
-    ### Don't include the port number here. Change the "port" site setting instead, at /admin/site_settings.
     ### If you change this setting you will need to
     ###   - restart sidekiq if you change this setting
     ###   - rebake all to posts using: `RAILS_ENV=production bundle exec rake posts:rebake`
-    - "localhost"
+    - forum.localhost # Update this to be the domain of your production site
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
